syntax = "proto3";

message GetSubscriptionStatusInput {
  string subscriptionKey = 1;
}

message GetSubscriptionStatusOutput {
  bool active = 1;
  uint32 expiryTimestamp = 2;
}
